--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -80,6 +80,12 @@ Logo styles
 /* ==========================================================================
 Main page styles
 ========================================================================== */
+.main-page-background
+{
+	background: linear-gradient(#00cc00,#009900);
+	
+}
+
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 300px;
@@ -117,6 +123,63 @@ only screen and (                min-resolution: 2dppx) {
         background: url("../images/hipster2x.png") no-repeat center top;
         background-size: contain;
     }
+}
+
+/* ==========================================================================
+Dropdown styles
+========================================================================== */
+.dropbtn {
+    background-color: white;
+    color: #00cc00;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    
+
+    border-radius: 5px;
+    
+}
+.dropdown-container
+{
+width: 100%;	
+	
+}
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin: auto;
+    display: table;
+    padding-bottom: 20px;
+    z-index: 3;
+
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 /* ==========================================================================
